set(AXI_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/axi)
add_subdirectory(common)
add_subdirectory(basic)
#add_subdirectory(hifive)
#add_subdirectory(tiny32)
#add_subdirectory(tiny32-mc)
#add_subdirectory(tiny64)
#add_subdirectory(tiny64-mc)
#add_subdirectory(test32)
#add_subdirectory(linux)
#add_subdirectory(linux32)
